Added styling to the footer

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@ body {
   font-weight: 400;
 }
 
+header {
+  border-bottom: 0.8px solid #b6b5c4;
+  padding: 0 0 30px 0;
+}
+
 .weather-app {
   max-width: 600px;
   margin: 20px auto;
@@ -13,10 +18,12 @@ body {
     rgb(207, 211, 236) 100.2%
   );
   border-radius: 7px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 .search-form-input {
   font-family: "Roboto", sans-serif;
+  font-size: 15px;
   border-radius: 6px;
   width: 80%;
   padding: 12px 20px;
@@ -26,9 +33,16 @@ body {
 
 .search-form-button {
   font-family: "Roboto", sans-serif;
+  font-size: 15px;
   border-radius: 6px;
   padding: 12px 20px;
   width: 19%;
   border-color: cornflowerblue;
   border-width: 1px;
+}
+
+footer {
+  font-size: 11px;
+  max-width: 600px;
+  margin: -15px auto;
 }
