--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,22 @@ header {
   padding: 0 0 30px 0;
 }
 
+h1 {
+  font-size: 45px;
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+
+h2 {
+  font-size: 25px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+
+p {
+  padding: 5px 0px 0px;
+}
+
 .weather-app {
   max-width: 600px;
   margin: 20px auto;
@@ -18,7 +34,6 @@ header {
     rgb(207, 211, 236) 100.2%
   );
   border-radius: 7px;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
 .search-form-input {
@@ -41,8 +56,9 @@ header {
   border-width: 1px;
 }
 
-footer {
+.footer {
   font-size: 11px;
   max-width: 600px;
   margin: -15px auto;
+  color: rgba(0, 0, 0, 0.6);
 }
