--- a/src/style.css
+++ b/src/style.css
@@ -29,9 +29,10 @@ p {
   margin: 20px auto;
   padding: 30px 50px;
   background: linear-gradient(
-    109.6deg,
-    rgb(245, 239, 249) 30.1%,
-    rgb(207, 211, 236) 100.2%
+    89.9deg,
+    rgb(208, 246, 255) 0.1%,
+    rgb(255, 237, 237) 47.9%,
+    rgb(255, 255, 231) 100.2%
   );
   border-radius: 7px;
 }
@@ -55,7 +56,11 @@ p {
   border-color: cornflowerblue;
   border-width: 1px;
 }
-
+.five-forecast {
+  text-align: center;
+  position: relative;
+  left: -12px;
+}
 .footer {
   font-size: 11px;
   max-width: 600px;
