--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 header {
-  border-bottom: 0.8px solid #b6b5c4;
   padding: 0 0 30px 0;
 }
 
@@ -42,7 +41,7 @@ p {
   font-size: 15px;
   border-radius: 6px;
   width: 80%;
-  padding: 12px 20px;
+  padding: 8px 20px;
   border-color: cornflowerblue;
   border-width: 1px;
 }
@@ -51,11 +50,38 @@ p {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
   border-radius: 6px;
-  padding: 12px 20px;
+  padding: 8px 20px;
   width: 19%;
   border-color: cornflowerblue;
   border-width: 1px;
 }
+
+.units {
+  font-size: 13px;
+  margin-top: 30px;
+  margin-bottom: 5px;
+  text-align: right;
+}
+
+.today-date {
+  font-size: 18px;
+}
+
+.today-temp {
+  font-size: 100px;
+  margin: 0px 0px -30px 0px;
+}
+
+.current-conditions {
+  font-weight: 500;
+  font-size: 30px;
+}
+.today-icon {
+  font-size: 118px;
+  padding-top: 35px;
+  margin: 0px 10px;
+}
+
 .five-forecast {
   text-align: center;
   position: relative;
