--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-  padding: 0 0 30px 0;
+  padding: 20px 0 0px 0;
 }
 
 h1 {
@@ -27,11 +27,10 @@ p {
   max-width: 600px;
   margin: 20px auto;
   padding: 30px 50px;
-  background: linear-gradient(
-    89.9deg,
-    rgb(208, 246, 255) 0.1%,
-    rgb(255, 237, 237) 47.9%,
-    rgb(255, 255, 231) 100.2%
+  background: radial-gradient(
+    592px at 48.2% 50%,
+    rgba(255, 255, 249, 0.6) 0%,
+    rgb(160, 199, 254) 74.6%
   );
   border-radius: 7px;
 }
