Updated current weather data to remove high and low and add feels like. Added JS for wind speed and feels like.

--- a/src/style.css
+++ b/src/style.css
@@ -91,13 +91,16 @@ p {
 
 .current-key-stats-container {
   display: flex;
-  justify-content: start;
-  gap: 41%;
+  justify-content: space-between;
 }
 
 .current-conditions {
   font-weight: 500;
   font-size: 30px;
+}
+
+.current-conditions:first-letter {
+  text-transform: capitalize;
 }
 
 .five-day-container {
