--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,10 @@ p {
   margin: 0px 0px 10px 0px;
 }
 
+.five-day-high {
+  font-weight: bold;
+}
+
 .footer {
   font-size: 11px;
   max-width: 600px;
